src/main/java/com/example/stream/quarkus/registry/model/error/PersonDeleteOk.java
package com.example.stream.quarkus.registry.model.error;

public record PersonDeleteOk() implements PersonSuccess {
}
